--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.0",
     "@reduxjs/toolkit": "^2.2.7",
     "antd": "^5.20.1",
     "jwt-decode": "^4.0.0",
@@ -19,7 +20,8 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.0",
     "redux-persist": "^6.0.0",
-    "sonner": "^1.5.0"
+    "sonner": "^1.5.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
