--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "antd": "^5.20.1",
     "axios": "^1.7.5",
     "jwt-decode": "^4.0.0",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.2",
